# tauri-plugin-keygen

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  package-lock.json  package.json  rollup.config.js
.changes/: config.json  initial-release.md  readme.md
.github/: FUNDING.yml
dist-js/: error.d.ts  index.cjs  index.d.ts  index.js
examples/esp-feature-license/: README.md  package-lock.json  package.json
examples/esp-feature-license/src/: atoms.ts  main.tsx  routeTree.gen.ts  types.ts  utils.ts
examples/esp-feature-license/src-tauri/: Cargo.toml  tauri.conf.json
examples/esp-feature-license/src-tauri/capabilities/: default.json
examples/esp-feature-license/src-tauri/src/: main.rs
examples/esp-feature-license/src/api/: images.ts
examples/esp-feature-license/src/components/: ProLicenseModal.tsx
examples/esp-feature-license/src/routes/: esp.tsx  index.tsx  validate.tsx
examples/esp-trial-license/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
examples/esp-trial-license/src/: index.css  routeTree.gen.ts  utils.ts
examples/esp-trial-license/src-tauri/: Cargo.toml  tauri.conf.json
examples/esp-trial-license/src-tauri/capabilities/: default.json
examples/esp-trial-license/src-tauri/src/: main.rs
examples/esp-trial-license/src/api/: esps.ts  images.ts
examples/esp-trial-license/src/routes/: _licensed.esp.tsx  _licensed.tsx  index.tsx  validate.tsx
examples/tauri-app/: package.json
examples/tauri-app/src/: App.svelte
examples/tauri-app/src-tauri/: Cargo.toml
examples/tauri-app/src-tauri/src/: main.rs
guest-js/: error.ts  index.ts
permissions/: default.toml
permissions/autogenerated/: reference.md
permissions/autogenerated/commands/: activate.toml  checkout_machine.toml  get_license.toml  get_license_key.toml  reset_license.toml  reset_license_key.toml  validate_key.toml
permissions/schemas/: schema.json
src/: commands.rs  err.rs  lib.rs
src/client/: mod.rs  sig.rs
src/licensed/: license.rs  mod.rs  types.rs
src/machine/: mod.rs  types.rs
webview-dist/: index.d.ts  index.js
webview-src/: .gitignore  index.ts  tsconfig.json
