[package]
name = "tauri-plugin-keygen"
version = "0.1.0"
authors = ["Baginda Namora"]
description = "A Tauri Plugin for Keygen.sh Licensing"
edition = "2021"
rust-version = "1.60"
exclude = ["/examples", "/webview-dist", "/webview-src", "node_modules"]

[dependencies]
tauri = { version = "1.5.2", features = ["os-api"] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
reqwest = { version = "0.11.22", features = ["json"] }
machine-uid = "0.5.1"
whoami = "1.4.1"
serde_json = "1.0.107"
tokio = { version = "1.33.0", features = ["sync"] }
ed25519-dalek = { version = "2.0.0", features = ["serde"] }
sha2 = "0.10.8"
base64 = "0.21.5"
hex = "0.4.3"
chrono = "0.4.31"
aes-gcm = "0.9"
