[package]
name = "tauri-plugin-keygen"
version = "2.0.0"
authors = ["Baginda Namora", "Alexander Falk"]
description = "A Tauri Plugin for Keygen.sh Licensing"
edition = "2021"
rust-version = "1.77.2"
license = "MIT"
exclude = [
    "/examples",
    "/dist-js",
    "/assets",
    "node_modules",
]
links = "tauri-plugin-keygen"

[dependencies]
tauri = { version = "2.0.3", features = [] }
serde = { version = "1.0", features = ["derive"] }
thiserror = "1.0"
reqwest = { version = "0.12.4", features = ["json"] }
machine-uid = "0.5.1"
whoami = "1.5.1"
serde_json = "1.0.107"
tokio = { version = "1.40.0", features = ["sync"] }
ed25519-dalek = { version = "2.0.0", features = ["serde"] }
sha2 = "0.10.8"
base64 = "0.21.5"
hex = "0.4.3"
chrono = "0.4.31"
aes-gcm = "0.9"
tauri-plugin-os = "2.0.1"

[build-dependencies]
tauri-plugin = { version = "2.0.1", features = ["build"] }
